--- a/main.css
+++ b/main.css
@@ -64,6 +64,8 @@ form {
       color: #ffffff; }
       form footer button:disabled {
         color: #dddcdc;
-        background-color: #f6f6f6; }
+        background-color: #f6f6f6;
+        cursor: not-allowed; }
       form footer button:hover {
-        opacity: 0.7; }
+        opacity: 0.7;
+        cursor: pointer; }
