--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -58,13 +58,16 @@ html, body {
     justify-content: space-between;
 
     > div {
+      height: 10%;
       width: 80%;
+      position: relative;
       display: flex;
       flex-direction: column-reverse;
       align-items: baseline;
-
+      
       label {
-        transition: all 0.5s;
+        transition: all 0.4s;
+        position: absolute;
         //color: #efeeed;
         color: #333333;
       }
@@ -80,7 +83,8 @@ html, body {
 
           + label {
             color: #333333;
-            font-size: 17px;
+            font-size: 15px;
+            margin-top: -35px;
           }
         }
       }
@@ -88,6 +92,7 @@ html, body {
 
     footer {
       height: 20%;
+      width: 80%;
       > a {
         display: block;
         margin-top: 30px;
