Add label up id.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -147,6 +147,11 @@ html, body {
     border-radius: 100%;
     -webkit-animation: spin 8s linear infinite; }
 
+#label-up {
+  margin: -35px 0px 0px 0px;
+  color: #333333;
+  font-size: 15px; }
+
 @keyframes spin {
   0% {
     -webkit-transform: rotate(0deg); }
