Error being showed when form is not valid.

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -40,6 +40,25 @@ html, body {
   }
 }
 
+
+
+@mixin base-input {
+  width: 100%;
+  border: none;
+  //border-bottom: 1px solid #efeeed;
+  border-bottom: 1px solid #333333;
+
+  &:focus {
+      outline: none;
+
+      + label {
+        color: #333333;
+        font-size: 15px;
+        margin-top: -35px;
+      }
+    }
+}
+
 #container {
   height: 65%;
   width: 100%;
@@ -60,33 +79,33 @@ html, body {
     > div {
       height: 10%;
       width: 80%;
+      margin: 0 0 20px 0;
       position: relative;
       display: flex;
       flex-direction: column-reverse;
       align-items: baseline;
 
-      label {
+      > label {
         transition: all 0.4s;
         position: absolute;
         //color: #efeeed;
         color: #333333;
       }
 
-      input {
-        width: 100%;
-        border: none;
-        //border-bottom: 1px solid #efeeed;
-        border-bottom: 1px solid #333333;
+      > input.error {
+        @include base-input;
+        border-bottom: 1px solid #eb4a46;
+      }
 
-        &:focus {
-          outline: none;
+      > input {
+        @include base-input
+      }
 
-          + label {
-            color: #333333;
-            font-size: 15px;
-            margin-top: -35px;
-          }
-        }
+      > span {
+        position: absolute;
+        bottom: -20px;
+        color: #eb4a46;
+        font-size: 12px;
       }
     }
 
@@ -166,6 +185,8 @@ html, body {
   color: #333333;
   font-size: 15px;
 }
+
+
 
 @keyframes spin {
   0% {-webkit-transform: rotate(0deg)}
