--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,24 +33,41 @@ html, body {
     #container form > div {
       height: 10%;
       width: 80%;
+      margin: 0 0 20px 0;
       position: relative;
       display: flex;
       flex-direction: column-reverse;
       align-items: baseline; }
-      #container form > div label {
+      #container form > div > label {
         transition: all 0.4s;
         position: absolute;
         color: #333333; }
-      #container form > div input {
+      #container form > div > input.error {
         width: 100%;
         border: none;
-        border-bottom: 1px solid #333333; }
-        #container form > div input:focus {
+        border-bottom: 1px solid #333333;
+        border-bottom: 1px solid #eb4a46; }
+        #container form > div > input.error:focus {
           outline: none; }
-          #container form > div input:focus + label {
+          #container form > div > input.error:focus + label {
             color: #333333;
             font-size: 15px;
             margin-top: -35px; }
+      #container form > div > input {
+        width: 100%;
+        border: none;
+        border-bottom: 1px solid #333333; }
+        #container form > div > input:focus {
+          outline: none; }
+          #container form > div > input:focus + label {
+            color: #333333;
+            font-size: 15px;
+            margin-top: -35px; }
+      #container form > div > span {
+        position: absolute;
+        bottom: -20px;
+        color: #eb4a46;
+        font-size: 12px; }
     #container form footer {
       height: 20%;
       width: 80%; }
