--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -14,6 +14,34 @@ html, body {
   text-align: center;
   align-items: center;
   justify-content: center; }
+  html > div.success-modal, body > div.success-modal {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    background-color: #00c8b3; }
+    html > div.success-modal > h3, body > div.success-modal > h3 {
+      color: white;
+      text-shadow: 1px 2px 5px #000; }
+    html > div.success-modal > h4, body > div.success-modal > h4 {
+      color: white;
+      position: absolute;
+      left: 10px; }
+  html > div.error-modal, body > div.error-modal {
+    width: 100%;
+    height: 50px;
+    position: absolute;
+    text-align: center;
+    top: 0;
+    background-color: #fe5f55; }
+    html > div.error-modal > h3, body > div.error-modal > h3 {
+      color: white;
+      text-shadow: 1px 2px 5px #000; }
+    html > div.error-modal > h4, body > div.error-modal > h4 {
+      color: white;
+      position: absolute;
+      left: 10px; }
 
 #container {
   height: 65%;
@@ -63,7 +91,7 @@ html, body {
             color: #333333;
             font-size: 15px;
             margin-top: -35px; }
-      #container form > div > span {
+      #container form > div > span.error {
         position: absolute;
         bottom: -20px;
         color: #eb4a46;
