--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,21 +1,20 @@
-@font-face {
-  font-family: 'sansation';
-  src: url('../../sansation.ttf')
-}
-
-* {
-  font-family: 'sansation';
-  font-size: 20px;
-  color: #efeeed;
-}
-
-html, body {
-  height: 100%;
+@mixin top-modal-base {
   width: 100%;
-  display: flex;
+  height: 50px;
+  position: absolute;
   text-align: center;
-  align-items: center;
-  justify-content: center;
+  top: 0;
+
+  > h3 {
+    color: white;
+    text-shadow: 1px 2px 5px #000;
+  }
+
+  > h4 {
+    color: white;
+    position: absolute;
+    left: 10px;
+  }
 }
 
 @mixin base-button {
@@ -40,8 +39,6 @@ html, body {
   }
 }
 
-
-
 @mixin base-input {
   width: 100%;
   border: none;
@@ -49,14 +46,44 @@ html, body {
   border-bottom: 1px solid #333333;
 
   &:focus {
-      outline: none;
+    outline: none;
 
-      + label {
-        color: #333333;
-        font-size: 15px;
-        margin-top: -35px;
-      }
+    + label {
+      color: #333333;
+      font-size: 15px;
+      margin-top: -35px;
     }
+  }
+}
+
+@font-face {
+  font-family: 'sansation';
+  src: url('../../sansation.ttf')
+}
+
+* {
+  font-family: 'sansation';
+  font-size: 20px;
+  color: #efeeed;
+}
+
+html, body {
+  height: 100%;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+
+  > div.success-modal {
+    @include top-modal-base;
+    background-color: #00c8b3;
+  }
+
+  > div.error-modal {
+    @include top-modal-base;
+    background-color: #fe5f55;
+  }
 }
 
 #container {
@@ -101,7 +128,7 @@ html, body {
         @include base-input
       }
 
-      > span {
+      > span.error {
         position: absolute;
         bottom: -20px;
         color: #eb4a46;
