--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -100,7 +100,8 @@ html, body {
         font-size: 12px; }
     #container form footer {
       height: 20%;
-      width: 80%; }
+      width: 80%;
+      position: relative; }
       #container form footer > a {
         display: block;
         margin-top: 30px; }
@@ -120,9 +121,9 @@ html, body {
         #container form footer > button:hover {
           opacity: 0.7;
           cursor: pointer; }
-      #container form footer div {
+      #container form footer div.edit-profile-section {
         height: 100%; }
-        #container form footer div > button {
+        #container form footer div.edit-profile-section > button {
           height: 50px;
           width: 50%;
           display: inline-block;
@@ -133,15 +134,15 @@ html, body {
           color: #ffffff;
           display: inline;
           width: 35%; }
-          #container form footer div > button:disabled {
+          #container form footer div.edit-profile-section > button:disabled {
             color: #dddcdc;
             background-color: #f6f6f6;
             cursor: not-allowed; }
-          #container form footer div > button:hover {
+          #container form footer div.edit-profile-section > button:hover {
             opacity: 0.7;
             cursor: pointer; }
           @media all and (max-width: 30em) {
-            #container form footer div > button {
+            #container form footer div.edit-profile-section > button {
               height: 50px;
               width: 50%;
               display: inline-block;
@@ -153,14 +154,14 @@ html, body {
               display: block;
               margin: 10px auto;
               width: 60%; }
-              #container form footer div > button:disabled {
+              #container form footer div.edit-profile-section > button:disabled {
                 color: #dddcdc;
                 background-color: #f6f6f6;
                 cursor: not-allowed; }
-              #container form footer div > button:hover {
+              #container form footer div.edit-profile-section > button:hover {
                 opacity: 0.7;
                 cursor: pointer; } }
-        #container form footer div > a {
+        #container form footer div.edit-profile-section > a {
           display: block;
           margin-top: 30px; }
   #container #user-list {
@@ -169,30 +170,16 @@ html, body {
     flex-direction: column;
     justify-content: space-between; }
 
-#spinner {
-  margin: 25% auto;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #333333;
-  border: 0.2em solid #457a9a;
-  border-left: 0.2em solid #333333;
-  border-right: 0.2em solid #333333;
+.spinner {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 5px;
+  left: 44%;
+  border: 0.1em solid #00c8b3;
+  border-top-color: white;
   border-radius: 100%;
   -webkit-animation: spin360 2s linear infinite; }
-  #spinner::before {
-    content: "";
-    display: block;
-    width: 80%;
-    height: 80%;
-    box-sizing: border-box;
-    border: 0.2em solid #457a9a;
-    border-top: 0.2em solid #333333;
-    border-bottom: 0.2em solid #333333;
-    border-radius: 100%;
-    -webkit-animation: spin 8s linear infinite; }
 
 #label-up {
   margin: -35px 0px 0px 0px;
