--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -140,6 +140,8 @@ html, body {
     footer {
       height: 20%;
       width: 80%;
+      position: relative;
+
       > a {
         display: block;
         margin-top: 30px;
@@ -149,7 +151,7 @@ html, body {
         @include base-button;
       }
 
-      div {
+      div.edit-profile-section {
         height: 100%;
         > button {
           @include base-button;
@@ -180,32 +182,16 @@ html, body {
   }
 }
 
-#spinner {
-  margin: 25% auto;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #333333;
-  border: 0.2em solid #457a9a;
-  border-left: 0.2em solid #333333;
-  border-right: 0.2em solid #333333;
+.spinner {
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 5px;
+  left: 44%;
+  border: 0.1em solid #00c8b3;
+  border-top-color: white;
   border-radius: 100%;
   -webkit-animation: spin360 2s linear infinite;
-
-  &::before {
-    content: "";
-    display: block;
-    width: 80%;
-    height: 80%;
-    box-sizing: border-box;
-    border: 0.2em solid #457a9a;
-    border-top: 0.2em solid #333333;
-    border-bottom: 0.2em solid #333333;
-    border-radius: 100%;
-    -webkit-animation: spin 8s linear infinite;
-  }
 }
 
 #label-up {
@@ -213,8 +199,6 @@ html, body {
   color: #333333;
   font-size: 15px;
 }
-
-
 
 @keyframes spin {
   0% {-webkit-transform: rotate(0deg)}
