--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -34,9 +34,13 @@
     cursor: not-allowed;
   }
 
-  &:hover {
+  &:not(:focus):hover {
     opacity: 0.7;
     cursor: pointer;
+  }
+
+  &:focus {
+    outline: none;
   }
 }
 
