--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -114,6 +114,9 @@ html, body {
         border-radius: 100px;
         background-color: #00c8b3;
         color: #ffffff; }
+        #container form footer > button:not(:disabled):hover {
+          opacity: 0.7;
+          cursor: pointer; }
         #container form footer > button:disabled {
           color: #dddcdc;
           background-color: #f6f6f6;
@@ -136,6 +139,9 @@ html, body {
           color: #ffffff;
           display: inline;
           width: 35%; }
+          #container form footer div.edit-profile-section > button:not(:disabled):hover {
+            opacity: 0.7;
+            cursor: pointer; }
           #container form footer div.edit-profile-section > button:disabled {
             color: #dddcdc;
             background-color: #f6f6f6;
@@ -158,6 +164,9 @@ html, body {
               display: block;
               margin: 10px auto;
               width: 60%; }
+              #container form footer div.edit-profile-section > button:not(:disabled):hover {
+                opacity: 0.7;
+                cursor: pointer; }
               #container form footer div.edit-profile-section > button:disabled {
                 color: #dddcdc;
                 background-color: #f6f6f6;
@@ -174,7 +183,7 @@ html, body {
     height: 50%;
     display: flex;
     flex-direction: column;
-    justify-content: space-between; }
+    justify-content: space-around; }
 
 .spinner {
   width: 30px;
