--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -28,18 +28,13 @@
   background-color: #00c8b3;
   color: #ffffff;
 
-  &:not(:disabled):hover {
-    opacity: 0.7;
-    cursor: pointer;
-  }
-
   &:disabled {
     color: #dddcdc;
     background-color: #f6f6f6;
     cursor: not-allowed;
   }
 
-  &:not(:focus):hover {
+  &:hover {
     opacity: 0.7;
     cursor: pointer;
   }
