--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -181,6 +181,10 @@ html, body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+
+    label {
+      color: #333333;
+    }
   }
 }
 
