--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -12,6 +12,7 @@
 
   > h4 {
     color: white;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
     position: absolute;
     left: 10px;
     cursor: pointer;
