--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -7,7 +7,7 @@
 
   > h3 {
     color: white;
-    text-shadow: 1px 2px 5px #000;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.4);
   }
 
   > h4 {
